--- a/css/extra.css
+++ b/css/extra.css
@@ -1,3 +1,15 @@
 .masthead-avatar-mine {
     width: 23rem;
 }
+
+.masthead-mine {
+    padding-top: calc(3rem + 74px);
+    padding-bottom: 6rem;
+} 
+
+@media (min-width:992px){
+    .masthead-mine{
+        padding-top: calc(3rem + 104px);
+        padding-bottom: 6rem
+    }
+}
